tests/type_errors/sortby_lambda_wrong_arity.nos
# expect_error: expected 2
# Issue 5b: Passing wrong-arity lambda to higher-order function
main() = {
    nums = [3, 1, 2]
    nums.sortBy(x => x)
}
